@@ -180,6 +180,7 @@ int main(int argc, char* argv[])
 #include &quot;libtorrent/file.hpp&quot;
 #include &quot;libtorrent/storage.hpp&quot;
 #include &quot;libtorrent/hasher.hpp&quot;
+#include &quot;libtorrent/file_pool.hpp&quot;
 
 #include &lt;boost/filesystem/operations.hpp&gt;
 #include &lt;boost/filesystem/path.hpp&gt;
@@ -188,7 +189,10 @@ int main(int argc, char* argv[])
 using namespace boost::filesystem;
 using namespace libtorrent;
 
-void add_files(torrent_info&amp; t, path const&amp; p, path const&amp; l)
+void add_files(
+        torrent_info&amp; t
+        , path const&amp; p
+        , path const&amp; l)
 {
         path f(p / l);
         if (is_directory(f))
@@ -199,10 +203,7 @@ void add_files(torrent_info&amp; t, path const&amp; p, path const&amp; l)
         else
         {
                 std::cerr &lt;&lt; &quot;adding \&quot;&quot; &lt;&lt; l.string() &lt;&lt; &quot;\&quot;\n&quot;;
-                file fi(f, file::in);
-                fi.seek(0, file::end);
-                libtorrent::size_type size = fi.tell();
-                t.add_file(l, size);
+                t.add_file(l, file_size(f));
         }
 }
 
@@ -211,6 +212,8 @@ int main(int argc, char* argv[])
         using namespace libtorrent;
         using namespace boost::filesystem;
 
+        path::default_name_check(no_check);
+
         if (argc != 4)
         {
                 std::cerr &lt;&lt; &quot;usage: make_torrent &lt;output torrent-file&gt; &quot;
@@ -218,13 +221,11 @@ int main(int argc, char* argv[])
                 return 1;
         }
 
-        boost::filesystem::path::default_name_check(native);
-
         try
         {
                 torrent_info t;
-                path full_path = initial_path() / path(argv[3]);
-                ofstream out(initial_path() / path(argv[1]), std::ios_base::binary);
+                path full_path = complete(path(argv[3]));
+                ofstream out(complete(path(argv[1])), std::ios_base::binary);
 
                 int piece_size = 256 * 1024;
                 char const* creator_str = &quot;libtorrent&quot;;
@@ -232,7 +233,8 @@ int main(int argc, char* argv[])
                 add_files(t, full_path.branch_path(), full_path.leaf());
                 t.set_piece_size(piece_size);
 
-                storage st(t, full_path.branch_path());
+                file_pool fp;
+                storage st(t, full_path.branch_path(), fp);
                 t.add_tracker(argv[2]);
 
                 // calculate the hash for all pieces
@@ -251,8 +253,8 @@ int main(int argc, char* argv[])
                 // create the torrent and print it to out
                 entry e = t.create_torrent();
                 libtorrent::bencode(std::ostream_iterator&lt;char&gt;(out), e);
-        }
-        catch (std::exception&amp; e)
+                }
+                catch (std::exception&amp; e)
         {
                 std::cerr &lt;&lt; e.what() &lt;&lt; &quot;\n&quot;;
         }
